# PyelogP

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
data/: example.csv
pyelogp/: __init__.py  data.py  find_pc.py
tests/: test_core.py
