[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyelogp"
version = "0.1.1"
authors = [
    {name="Liang Chern Chow", email="liangchern@gmail.com"},
    {name="Thierno Kane", email="tkane83@gmail.com"}
]
description = "A lightweight Python library to estimate preconsolidation pressure using volumetric strain energy method with knee detection in the e-log(P) space."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
keywords = [
    "geotechnical",
    "consolidation",
    "settlement",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "kneed>=0.8.0",
    "matplotlib>=3.10",
]

[project.urls]
Homepage = "https://github.com/liangchow/pyelogp"
Issues = "https://github.com/liangchow/pyelogp/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyelogp"]